fixed about and contact header alignment

--- a/src/components/aboutModule/About.module.scss
+++ b/src/components/aboutModule/About.module.scss
@@ -20,12 +20,12 @@ $offset: 20px;
 
 .aboutCard {
   display: flex;
-  flex: 1;
+  flex: 0.65 1 auto;
   flex-direction: row-reverse; 
   align-items: center;
   justify-content: center;
   position: relative;
-  width: calc(90% - 50px);
+  // width: calc(90% - 50px);
   max-width: 1100px;
 }
 
@@ -86,10 +86,10 @@ $offset: 20px;
     position: absolute;
     background-color: $color-white;
     height: 400%;
-    width: 200%;
+    width: 400%;
     top:50%;
-    left:0%;
-    transform: translate(-50%, -50%);
+    right:0;
+    transform: translate(0%, -50%);
     z-index: 0;
   }
   h2 {
