--- a/src/components/contactModule/Contact.module.scss
+++ b/src/components/contactModule/Contact.module.scss
@@ -60,10 +60,10 @@
     position: absolute;
     background-color: $color-white;
     height: 200%;
-    width: 200%;
+    width: 500%;
     top:50%;
-    left:0%;
-    transform: translate(-50%, -50%);
+    right:0%;
+    transform: translate(0%, -50%);
     z-index: 0;
   }
   h2 {
@@ -77,7 +77,8 @@
 }
 
 .formContainer {
-  flex: 1;
+  flex: 0.75 1 725px;
+  max-width: 1100px;
 }
 
 .formField {
@@ -126,7 +127,7 @@
 
 .contactModule {
   background-color: $color-primary;
-  padding: 4rem 2rem 4rem;
+  padding: calc(4rem + 66px) 2rem 4rem;
   overflow: hidden;
 }
 
